--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,70 @@
 
+
+
 /* Your CSS Code here. */
+
+.row {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.item {
+	width:70px;
+	height:70px;
+    background-color: #ccc;
+    padding: 10px;
+	font-size:32px;
+/* 	border-right: 4px solid white; */
+}
+.no-1{
+	order:2;
+	background-color:red;
+}
+.no-2{
+	order:3;
+	background-color:blue;
+}
+.no-3{
+	order:1;
+	background-color:green;
+}
+
+.No-1{
+	order:6;
+	background-color:red;
+}
+.No-1{
+	order:6;
+	background-color:red;
+}
+.No-2{
+	order:7;
+	background-color:blue;
+}
+.No-3{
+	order:1;
+	background-color:green;
+}
+.No-4{
+	order:2;
+	background-color:green;
+}
+.No-5{
+	order:3;
+	background-color:green;
+}
+.No-6{
+	order:4;
+	background-color:green;
+}
+.No-7{
+	order:5;
+	background-color:green;
+}
+.holder{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
